# corelink-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/corelink/: Cargo.toml
crates/corelink/src/: config.rs  main.rs
crates/corelink/src/commands/: bazel_init.rs  cargo_init.rs  config_show.rs  docker_init.rs  doctor.rs  mod.rs  npm_init.rs  ping.rs
