[workspace]
resolver = "2"
members = ["crates/corelink"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Gustavo Schneiter <gustavo@humangr.com>"]
repository = "https://github.com/humangr-labs/corelink-cli"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
