[package]
name = "corelink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CoreLink CLI — Bazel/Buck2/Cargo/Docker/ML cache client"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
